build: application translated to english
