# lib/api/docs/swagger.js
@@ -41,7 +41,7 @@ const doc = {
       user: {
           _id: "ObjectId('64df73b31e5eda5eb868ddcd')",
           name: "John",
-          nickname: "Jhonny",
+          username: "Jhonny",
           surname: "Doe",
           email: "jhonny@example.com",
           password: "md5 hashed password",
@@ -84,14 +84,15 @@ const doc = {
     },
       updateuser: {
           $name: "Jhon",
-          $nickname: "johndough",
+          $username: "johndough",
           $email: "johndough@example.com",
           $surname: "Dough"
       },
       loggeduser: {
            $_id: "64df73b31e5eda5eb868ddcd",
-           $nickname:"johndough",
-           $email: "johndough@gmail.com"
+           $username:"johndough",
+           $email: "johndough@gmail.com",
+           $name: "John"
       },
       song: {
         $_id: "78kf73b31e6yda5eb868dder",
@@ -102,19 +103,20 @@ const doc = {
       },
       loginrequest: {
         email: "johndough@gmail.com",
-        nickname:"johndough",        
+        username:"johndough",        
         $password: "password"  
       },
       registerrequest: {
         $name: "John",
-        $nickname: "johndough",
+        $username: "johndough",
         $email: "johndough@example.com",
         $password: "password"
       },
       authuser:{
         $_id: "64df73b31e5eda5eb868ddcd",
-        $nickname: "johndough",
-        $email: "johndough@gmail.com"
+        $username: "johndough",
+        $email: "johndough@gmail.com",
+        $name: "John"
       },
       removesong: {
         $playlist_id: "ObjectId('64e748f0cb18ad90657b9043')",
